Alignment issues with the options for Gemstone type

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -2269,9 +2269,6 @@ ul.payment-icons{
 								margin-right: 10px;
 							}
 						}
-						li:nth-child(3n){
-							width: auto;
-						}
 					}
 					.group{
 						border-top:1px solid #ccc;
